--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-packaging==24.1
+git+https://github.com/islekcaganmert/bevyframe@0ee5a8d0f786ae2e74bec9f65a1f055c3cb0fe3f#egg=BevyFrame
 blinker==1.8.2
+build==1.2.1
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
@@ -12,11 +13,14 @@ idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+packaging==24.1
 pycparser==2.22
 PyJWT==2.9.0
+pyproject_hooks==1.1.0
+python-dotenv==1.0.1
 requests==2.32.3
 SQLAlchemy==2.0.34
+git+https://github.com/islekcaganmert/TheProtocols.py.git@e58482d8e98e0b420168c4bd7ff53ad8bf37e4e0#egg=TheProtocols
 typing_extensions==4.12.2
 urllib3==2.2.2
 Werkzeug==3.0.3
-python-dotenv==1.0.1
